# aegix-log

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: static_analysis.cmake
examples/: CMakeLists.txt
examples/basic_logging/: CMakeLists.txt  main.cpp
examples/conditional_logging/: CMakeLists.txt  main.cpp
examples/custom_log_threads/: CMakeLists.txt  main.cpp
examples/multi_logger/: CMakeLists.txt  main.cpp
examples/multi_thread_logging/: CMakeLists.txt  main.cpp
include/aegix-log/: config.h  format.h  log.h  log_entry.h  log_stream.h  log_thread.h  logger.h  util.h
include/aegix-log/detail/: config.h
include/aegix-log/formatter/: default_formatter.h  formatter.h
include/aegix-log/helper/: singleton.h  thread_safe_queue.h  token.h
include/aegix-log/sinks/: console_sink.h  file_sink.h  log_sink.h
src/: CMakeLists.txt  log.cpp  log.h  log_entry.h  log_sink.h  logger.cpp  logger.h
src/aegix-log/: format.h  log.h  log_entry.h  log_sink.h  logger.cpp  logger.h
src/aegix-log/sinks/: console_sink.h  file_sink.h  log_sink.h
src/sinks/: console_sink.h  file_sink.h
test/: CMakeLists.txt  main.cpp
